--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,11 @@
-body {
+body{
+    margin: 0px;
+}
+.cont {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 78vh;
     margin: 0;
 }
 
@@ -13,6 +16,7 @@ body {
 
 table {
     width: 100%;
+    border-radius: 25%;
 }
 
 
@@ -62,3 +66,32 @@ form input[type="text"] {
     text-align: center;
   }
   
+  .container table td{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container{
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.navbar{
+    overflow: hidden;
+}
+
+.navbar a{
+    color: black;
+    background-color: white;
+    padding: 16px 24px;
+    text-align: center;
+    float: left;
+    text-decoration: none;
+    font-size: 16px;
+}
